# rspacectl

./: .env.example  .gitignore  README.md  pyproject.toml
rspacectl/: __init__.py  app.py  config.py  context.py  exceptions.py  ids.py  output.py  utils.py
rspacectl/commands/: __init__.py  configure.py  create.py  delete.py  download.py  export.py  get_cmd.py  import_cmd.py  list_cmd.py  migrate.py  move.py  search.py  share.py  split.py  status.py  tag.py  update.py  upload.py
rspacectl/commands/migrate/: __init__.py  _common.py  _export.py  _import.py
tests/: conftest.py  test_config.py  test_ids.py  test_migrate.py  test_output.py
